--- a/ACS1yr_income.Rmd
+++ b/ACS1yr_income.Rmd
@@ -1,8 +1,13 @@
 ---
-title: "acs1yr_income"
-author: "MaryJoWebster"
-date: "September 12, 2019"
-output: html_document
+title: "ACS 1 year : Income and earnings"
+author: "MaryJo Webster"
+date:  "Last updated: `r Sys.Date()`"
+output:
+  html_document: 
+    toc: true
+    to_depth: 1
+    toc_float: true
+    theme: flatly
 ---
 
 ```{r setup, include=FALSE}
@@ -10,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, messages=FALSE, warning=FALSE}
-#library(censusapi)
+
 library(tidycensus)
 library(tidyverse)
 library(readxl)
@@ -24,10 +29,8 @@ library(rmarkdown)
 library(knitr)
 library(reshape2)
 library(DT)
-
-
-
-
+library(formattable)
+library(kableExtra)
 
 
 
@@ -45,6 +48,8 @@ census_api_key(Sys.getenv("CENSUS_API_KEY"))
 #acs_variable_list <- load_variables(2017, "acs5", cache = TRUE)
 #write.csv(acs_variable_list, 'acs_variable_list_2017.csv', row.names = FALSE)
 
+
+#variables that I'm pulling from Census API
 my_variables <- c(all = "B19013_001",
                             black = "B19013B_001",
                             indian = "B19013C_001",
@@ -59,8 +64,12 @@ my_variables <- c(all = "B19013_001",
                             med_earn_male = "B20002_002",
                             med_earn_female = "B20002_003")
 
+#years that this is going to pull
+#note: 2012 is the oldest one available via the API
 years <-  lst(2012, 2013, 2014, 2015, 2016, 2017, 2018)
 
+
+#this pulls state level (all states) for all years
 
 state_income <-  map_dfr(
   years,
@@ -71,9 +80,12 @@ state_income <-  map_dfr(
     survey = "acs1"
     ),
   .id = "year"
-  ) %>% clean_names() %>% mutate(level='states')
+  ) %>%
+  clean_names() %>%
+  mutate(level='states')
 
 
+#this pulls all Minnesota counties for all years
 county_income <-  map_dfr(
   years,
   ~ get_acs(
@@ -87,6 +99,7 @@ county_income <-  map_dfr(
   ) %>% clean_names() %>% mutate(level='mn counties')
 
 
+#this pulls national level, all years
 us_income <-  map_dfr(
   years,
   ~ get_acs(
@@ -98,6 +111,7 @@ us_income <-  map_dfr(
   .id = "year"
   ) %>% clean_names() %>% mutate(level='us')
 
+#this pulls all metro areas, all years
 metro_income <-  map_dfr(
   years,
   ~ get_acs(
@@ -112,11 +126,6 @@ metro_income <-  map_dfr(
 #combine files
 
 income <- bind_rows(county_income, state_income, us_income, metro_income)
-
-
-
-
-
 
 
 
@@ -147,27 +156,37 @@ income <-  income %>% mutate(adj_estimate = (cpi2018/cpi)*estimate,
                              adj_moe = (cpi2018/cpi)*moe)
 
 
+#this adds fields that set the low and high end of the estimates (based on margin of error)
 income <-  income %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe)
 
 ```
 
-```{r}
+```{r, warning=FALSE, message=FALSE}
+#this pulls median household income estimates for each state, all years
+
 states_hhincome <-  income %>% filter(level=='states', variable=='all') %>% select(year, name, adj_estimate)
 
 states_hhincome <-  dcast(states_hhincome, name ~ year)
 
-write.csv(states_hhincome, './output/states_hhincome.csv', row.names=FALSE)
+#write.csv(states_hhincome, './output/states_hhincome.csv', row.names=FALSE)
 
 
+#this pulls the MOE values associated with the median household income
+#combine these two files to test for statistical significance
 
 states_hhincome_moe <-  income %>% filter(level=='states', variable=='all') %>% select(year, name, adj_moe)
 
 states_hhincome_moe <-  dcast(states_hhincome_moe, name ~ year)
 
-write.csv(states_hhincome_moe, './output/states_hhincome_moe.csv', row.names=FALSE)
+#write.csv(states_hhincome_moe, './output/states_hhincome_moe.csv', row.names=FALSE)
 ```
 
 ```{r}
+
+#this pulls median EARNINGS for each state
+#then pulls the MOE values
+#and puts them together so you can run them through statistical significance calculator
+
 states_earnings <-  income %>% filter(level=='states', variable=='med_earnings') %>% select(year, name, adj_estimate, adj_moe)
 
 states_earnings_est <-  dcast(states_earnings %>% select(-adj_moe), name  ~ year)
@@ -176,50 +195,65 @@ states_earnings_moe <-  dcast(states_earnings %>% select(-adj_estimate), name  ~
 
 states_earnings_final <-  inner_join(states_earnings_est, states_earnings_moe, by=c("name"="name"))
 
-write.csv(states_earnings_final, './output/states_earnings.csv', row.names=FALSE)
+#write.csv(states_earnings_final, './output/states_earnings.csv', row.names=FALSE)
 
 
-income %>% filter(level=='us', variable=='all')
+
 ```
 
-
+#US median household income
+```{r}
+income %>% filter(level=='us', variable=='all') %>% mutate(adj_est=currency(adj_estimate, digits=0)) %>% select(year, adj_est)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
+```
 
 
 #Median household income - 1 person households, adjusted
 ```{r}
-income %>% filter(variable=='one_per_HH', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='one_per_HH', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 #4 person households
 ```{r}
-income %>% filter(variable=='four_per_HH', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='four_per_HH', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 
 
 #Median household income -- all households, adjusted
 ```{r}
-income %>% filter(variable=='all', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='all', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 #Median earnings - both genders
 ```{r}
-income %>% filter(variable=='med_earnings', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='med_earnings', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 #Median earnings women
 ```{r}
-income %>% filter(variable=='med_earn_female', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='med_earn_female', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 #Median earnings men
 ```{r}
-income %>% filter(variable=='med_earn_male', name=='Minnesota') %>% select(year, adj_estimate, adj_moe) %>% mutate(low=adj_estimate-adj_moe, high=adj_estimate+adj_moe) %>% select(-adj_moe)
+income %>% filter(variable=='med_earn_male', name=='Minnesota') %>%  
+  mutate(low=currency(adj_estimate-adj_moe, digits=0), high=currency(adj_estimate+adj_moe, digits=0), adj_est= currency(adj_estimate, digits=0)) %>%
+  select(year, adj_est, low, high)%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 #Gender earnings gap
 ```{r}
-pivot_wider(income %>% filter(name=='Minnesota', variable=='med_earn_male' | variable=='med_earn_female') %>% select(variable, year, adj_estimate), names_from = variable, values_from = adj_estimate ) %>% mutate(gap = med_earn_male-med_earn_female)
+pivot_wider(income %>% filter(name=='Minnesota', variable=='med_earn_male' | variable=='med_earn_female') %>% select(variable, year, adj_estimate), names_from = variable, values_from = adj_estimate ) %>% mutate(gap = currency(med_earn_male-med_earn_female, digits=0))%>%  kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 ```
 
 
@@ -228,21 +262,23 @@ pivot_wider(income %>% filter(name=='Minnesota', variable=='med_earn_male' | var
 #State level, groups across time
 ```{r, message=FALSE, warning=FAL}
 
-state_groups <- dcast(income%>% filter(name=='Minnesota') %>% select(year, variable, adj_estimate), variable ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
+state_groups <- dcast(income%>% filter(name=='Minnesota') %>% select(year, variable, adj_estimate), variable ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)%>% mutate(y2014r= currency(y2014, digits=0), y2015r = currency(y2015, digits=0), y2016r=currency(y2016, digits=0), y2017r = currency(y2017, digits=0), y2018r=currency(y2018, digits=0),diff= percent((y2018r-y2014r)/y2014r))
+
+state_groups  %>% select(variable, y2015r, y2016r, y2017r, y2018r, diff) %>% arrange(desc(diff))%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 
 
 
-state_groups <- state_groups %>%  select(variable, y2014, y2015, y2016, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
+```
 
-datatable(state_groups)
-
-
+```{r}
 state_groups_moe <- dcast(income%>% filter(name=='Minnesota') %>% select(year, variable, adj_moe), variable ~ year) 
 
 state_groups_join <-  inner_join(state_groups, state_groups_moe, by=c("variable"="variable"))
 
-write.csv(state_groups_join, './output/stategroups.csv')
+#write.csv(state_groups_join, './output/stategroups.csv')
 ```
+
+
 
 #Median HH income -- all households -- by county
 
@@ -253,102 +289,15 @@ my_counties <-  c("27003", "27019", "27037", "27053", "27123", "27139", "27163",
 
 
 
-all_counties <- dcast(income%>% filter(variable=='all', geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
+all_counties <- dcast(income%>% filter(variable=='all', geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`) %>% mutate(y2014r= currency(y2014, digits=0), y2015r = currency(y2015, digits=0), y2016r=currency(y2016, digits=0), y2017r = currency(y2017, digits=0), y2018r=currency(y2018, digits=0),diff= percent((y2018r-y2014r)/y2014r))
 
 
 
-all_counties <- all_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
+all_counties %>% select(name, y2015r, y2016r, y2017r, y2018r, diff) %>% arrange(desc(diff))%>% kable() %>%   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = F, position="left")
 
-datatable(all_counties)
+
 ```
 
 
 
-
-#Black households, by county
-```{r, message=FALSE, warning=FALSE}
-
-black_counties <- dcast(income%>% filter(variable=='black',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-black_counties <- black_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(black_counties)
-```
-
-
-#Hispanic households, by county
-
-```{r, message=FALSE, warning=FALSE}
-hispanic_counties <- dcast(income%>% filter(variable=='hispanic',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-hispanic_counties <- hispanic_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(hispanic_counties)
-```
-
-#Asian households, by county
-```{r, message=FALSE, warning=FALSE}
-asian_counties <- dcast(income%>% filter(variable=='asian',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-asian_counties <- asian_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(asian_counties)
-```
-
-#4-person households, by county
-```{r, message=FALSE, warning=FALSE}
-fourper_counties <- dcast(income%>% filter(variable=='four_per_HH',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-fourper_counties <- fourper_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(fourper_counties)
-```
-
-#Median earnings- females
-```{r, message=FALSE, warning=FALSE}
-female_counties <- dcast(income%>% filter(variable=='med_earn_female',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-female_counties <- female_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(female_counties)
-```
-
-#Median earnings - males
-```{r, warning=FALSE, message=FALSE}
-male_counties <- dcast(income%>% filter(variable=='med_earn_male',geoid %in% my_counties) %>% select(year, name, adj_estimate), name ~ year) %>% rename(y2018=`2018`, y2017=`2017`, y2016=`2016`, y2015=`2015`, y2014=`2014`)
-
-
-
-male_counties <- male_counties %>%  select(name, y2014, y2017,  y2018 )%>% mutate(y2014r= round(y2014,0), y2017r = round(y2017, 0), y2018r=round(y2018,0),diff= round((y2018r-y2014r)/y2014r*100,1)) %>% select(-y2014, -y2017,-y2018) %>% arrange(desc(diff))
-
-datatable(male_counties)
-```
-
-
-```{r}
-
-```
-
-
-```{r}
-income_pivot <-  income %>% filter(year=='2017' | year=='2018') %>% select(year, name, variable, adj_estimate, adj_moe)
-
-write.csv(income_pivot, './output/income.csv', row.names=FALSE)
-
-income_mn <-  pivot_wider(income %>% filter(name=='Minnesota') %>% select(year, variable, adj_estimate), names_from = year, values_from=adj_estimate)
-
-write.csv(income_mn, './output/income_mn.csv', row.names=FALSE)
-
-write.csv(income %>% filter(name=='United States', variable=='med_earnings') %>% select(year, adj_estimate, adj_moe), './output/us_earnings.csv', row.names=FALSE)
-```
 
